tests/parser-test-files/bad-files/parse-match.3.error
error: Malformed match branch
  --> test:6:4
   |
 6 |      5))
   |      ^ expected list
